// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositDataRegistry deposit data manager update succeeds 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 63853,
}
`;

exports[`DepositDataRegistry deposit data root update success 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 64595,
}
`;

exports[`DepositDataRegistry multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3364,
  "gasUsed": 688299,
}
`;

exports[`DepositDataRegistry single validator can update state and register validator 1`] = `
Object {
  "calldataByteLength": 1668,
  "gasUsed": 408598,
}
`;

exports[`DepositDataRegistry single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1188,
  "gasUsed": 334676,
}
`;
